--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -32,33 +32,33 @@
         <ul class="list-group">
             <li class="list-group-item">ID: 123</li>
             <li class="list-group-item">Email: <a href="mailto:kai@gmail.com">kai@gmail.com</a></li>
-            <li class="list-group-item">Office number: 404556788</li>
+            <li class="list-group-item">Office number: 345</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Jazz</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 678</li>
+            <li class="list-group-item">Email: <a href="mailto:jazz@hotmail.com">jazz@hotmail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/jazz" target="_blank" rel="noopener noreferrer">jazz</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
         <h2 class="card-title">Troy</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 345</li>
-            <li class="list-group-item">Email: <a href="mailto:troy@mail.com">troy@mail.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/troy" target="_blank" rel="noopener noreferrer">troy</a></li>
-        </ul>
-    </div>
-</div>
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">undefined</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: undefined</li>
-            <li class="list-group-item">Email: <a href="mailto:undefined">undefined</a></li>
-            <li class="list-group-item">School: undefined</li>
+            <li class="list-group-item">ID: 980</li>
+            <li class="list-group-item">Email: <a href="mailto:troy@mail.com">troy@mail.com</a></li>
+            <li class="list-group-item">School: NYU</li>
         </ul>
     </div>
 </div>
