--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -25,14 +25,14 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">kai</h2>
+        <h2 class="card-title">Kai</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 123</li>
-            <li class="list-group-item">Email: <a href="mailto:kai@htomail.com">kai@htomail.com</a></li>
-            <li class="list-group-item">Office number: 123</li>
+            <li class="list-group-item">Email: <a href="mailto:kai@mail.com">kai@mail.com</a></li>
+            <li class="list-group-item">Office number: 345</li>
         </ul>
     </div>
 </div>
@@ -43,22 +43,22 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 345</li>
+            <li class="list-group-item">ID: 456</li>
             <li class="list-group-item">Email: <a href="mailto:tj@mail.com">tj@mail.com</a></li>
             <li class="list-group-item">GitHub: <a href="https://github.com/tj" target="_blank" rel="noopener noreferrer">tj</a></li>
         </ul>
     </div>
 </div>
-,<div class="card employee-card">
+<div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">cat</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+        <h2 class="card-title">Grace</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 4</li>
-            <li class="list-group-item">Email: <a href="mailto:cat@mail.com">cat@mail.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/cat" target="_blank" rel="noopener noreferrer">cat</a></li>
+            <li class="list-group-item">ID: 890</li>
+            <li class="list-group-item">Email: <a href="mailto:grace@mail.com">grace@mail.com</a></li>
+            <li class="list-group-item">School: NYU</li>
         </ul>
     </div>
 </div>
